# leanmgr

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
.omx/plans/: github-market-research.md  leanmgr-cache-lifecycle-plan.md
docs/: tutorial.md
examples/: config.json
scripts/: install.sh
src/: ai.rs  clean.rs  cli.rs  config.rs  discovery.rs  doctor.rs  gc.rs  gitignore.rs  interactive.rs  lib.rs  main.rs  output.rs  paths.rs  process.rs  project.rs  recover.rs  restore.rs  size.rs  tags.rs  toolchain.rs  worktree.rs
src/interactive/: actions.rs  dashboard.rs  helpers.rs  keyboard.rs  mod.rs  session.rs  summary.rs  tests.rs
