[package]
name = "leanmgr"
version = "0.2.0"
edition = "2024"
description = "Manage disposable .lake cache state across many Lean 4 projects"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "3"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
